Fix desktop alignment: remove narrow max-width from ProblemDigIn inner

--- a/src/components/ProblemDigIn.module.css
+++ b/src/components/ProblemDigIn.module.css
@@ -3,7 +3,6 @@
 }
 
 .inner {
-  max-width: 820px;
 }
 
 .content {
